@@ -1,0 +1,5 @@
+<div data-role="fieldcontain">
+    <label for="upd_[[+name]]">[[+title]]</label>
+    <input type="datetime" name="upd_[[+name]]" id="upd_[[+name]]" value="[[+value]]" />
+</div>
+			
